# Semana18-12

./: Cargo.toml  README.md  bacon.toml
src/: main.rs
static/: index.html  layout.html  product.html
