[package]
name = "semana18-12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
shuttle-actix-web = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = "1.37.0"
tera = "1"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
